--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@
 *.plt
 erl_crash.dump
 .concrete/DEV_MODE
+_vendor
+*.swp
+*.swo
+.erlang.cookie
+log
+logs
+.idea
+*.iml
+*~
 
 # rebar 2.x
 .rebar
@@ -15,3 +24,4 @@ deps
 .rebar3
 _build/
 _checkouts/
+rebar3.crashdump
